fix: fix shift bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,7 @@ h1 {
   width: 750px;
   height: 250px;
   margin-bottom: 20px;
+  font-size: 1.5rem;
 }
 
 .text {
@@ -51,7 +52,7 @@ h1 {
   justify-content: center;
   padding: 0;
   vertical-align: top;
-border: none;
+  border: none;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 
 }
